[FIX] Fixed table align and color issue

--- a/frontend/src/assets/sass/layout/header/_header.scss
+++ b/frontend/src/assets/sass/layout/header/_header.scss
@@ -26,7 +26,7 @@
     h6 {
       font-size: 16px;
       line-height: 18px;
-      color: var(--gray-900);
+      color: var(--gray-0);
       max-width: 200px;
       overflow: hidden;
       white-space: nowrap;
@@ -34,7 +34,7 @@
     }
 
     p {
-      color: var(--gray-900);
+      color: var(--gray-0);
       max-width: 200px;
       overflow: hidden;
       white-space: nowrap;
