--- a/frontend/src/assets/sass/layout/sidebar/_sidebar.scss
+++ b/frontend/src/assets/sass/layout/sidebar/_sidebar.scss
@@ -19,7 +19,7 @@
 .sidebar-wrapper .nav-items {
   font-size: 14px;
   line-height: 14px;
-  color: var(--gray-700);
+  color: var(--gray-0);
   text-transform: capitalize;
   border-radius: 6px;
   margin: 8px 20px;
